tests/ui/generic-associated-types/ambig-hr-projection-issue-93340.old.stderr
error[E0283]: type annotations needed
  --> $DIR/ambig-hr-projection-issue-93340.rs:16:5
   |
LL |     cmp_eq
   |     ^^^^^^ cannot infer type of the type parameter `A` declared on the function `cmp_eq`
   |
note: type must be known for type parameter in this
  --> $DIR/ambig-hr-projection-issue-93340.rs:10:1
   |
LL | fn cmp_eq<'a, 'b, A: Scalar, B: Scalar, O: Scalar>(a: A::RefType<'a>, b: B::RefType<'b>) -> O {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the type must implement `Scalar`
note: required by a bound in `cmp_eq`
  --> $DIR/ambig-hr-projection-issue-93340.rs:10:22
   |
LL | fn cmp_eq<'a, 'b, A: Scalar, B: Scalar, O: Scalar>(a: A::RefType<'a>, b: B::RefType<'b>) -> O {
   |                      ^^^^^^ required by this bound in `cmp_eq`
help: consider specifying the generic arguments
   |
LL |     cmp_eq::<A, B, O>
   |           +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
